--- a/testeTicketTech/Views/Usuario/Editar.cshtml
+++ b/testeTicketTech/Views/Usuario/Editar.cshtml
@@ -1,4 +1,4 @@
-﻿@model testeTicketTech.Models.UsuarioModel
+﻿@model testeTicketTech.Models.UsuarioEditarModel
 
 @{
     ViewData["Title"] = "Editar Usuário";
@@ -9,7 +9,9 @@
     <hr />
 
     <form asp-action="Editar" method="post">
+        @Html.AntiForgeryToken()
         <input type="hidden" asp-for="Id" />
+
         <div class="form-group mb-3">
             <label asp-for="Nome" class="form-label"></label>
             <input asp-for="Nome" class="form-control" />
